Correcting alignment for email signup form

--- a/wp-content/themes/portent_enercare_2021/assets/scss/blocks/_email-signup.scss
+++ b/wp-content/themes/portent_enercare_2021/assets/scss/blocks/_email-signup.scss
@@ -60,7 +60,7 @@
 		}
 
 		@include media(">=desktop") {
-			left: 23.4%;
+			left: 18.8%;
 		}
 
 	}
@@ -80,6 +80,8 @@
 
 		@include media(">=tablet") {
 			margin: unset;
+			width: 30%;
+
 		}
 
 		form {
